--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -931,6 +945,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing the data in terms of the largest number of bikes rented from all time periods, it can be seen that for many stations on March 27 at 2:30 and March 14 at 7:00 there were above-average numbers of bikes rented. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -947,18 +968,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hour_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', '_date', 'minutes_', 'weekday']).agg({'bikes_rental':np.sum})\n",
-    "#hour_df.sort_values(by=['bikes_rental'], ascending = False).head(40) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# number of bikes at the 'Belwederska - Gagarina' station 2018-02-27 between 1 and 3 am\n",
-    "# warsaw_bikes_df_.iloc[3305:3320, warsaw_bikes_df_.columns == 'Belwederska - Gagarina'] "
+    "hour_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', '_date', 'minutes_', 'weekday']).agg({'bikes_rental':np.sum})"
    ]
   },
   {
@@ -1024,6 +1034,13 @@
     "alldfc_['total'] = alldfc_.sum(axis = 1)\n",
     "alldfc_['average/day'] = alldfc_.mean(axis = 1)\n",
     "bike_station_total = alldfc_.sort_values('total', ascending = False).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After adding up the number of bikes rented at all stations throughout the data collection period, it can be seen that there are stations from which no bike has left in the considered time. These stations, in the context of the popularity rating, were not taken into account and were removed from the collection."
    ]
   },
   {
@@ -1190,7 +1207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3. Analysis of bikes station"
+    "### 3.3. Station analysis"
    ]
   },
   {
