--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1,20 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,7 +53,7 @@
     "\n",
     "places = []\n",
     "\n",
-    "# path to the directory where JSON files are stored\n",
+    "# path to the directory where the JSON files are stored\n",
     "mdir = \"C:\\\\Users\\\\Przem\\\\Code\\\\Analysis-And-Visualization-For-Bike-Sharing-Systems-In-Warsaw\\\\data\"\n",
     "\n",
     "for file in Path(mdir).glob(\"*.json\"): \n",
@@ -144,17 +130,17 @@
    "source": [
     "def data_preprocessing_1(df): \n",
     "    \n",
-    "    # split JSON file names into year, month, day, hour and minutes\n",
+    "    # split the JSON file names into year, month, day, hour and minutes\n",
     "    df_ = pd.DataFrame({'year': df['date'].str[0:4],\n",
     "                     'month': df['date'].str[4:6],\n",
     "                     'day': df['date'].str[6:8],\n",
     "                     'hour': df['date'].str[9:11],\n",
     "                     'minutes': df['date'].str[11:13]})\n",
-    "    df['date'] = pd.to_datetime(df_)  # create a column with date from the above \"parts\" of JSON name\n",
-    "    df['day_of_week'] = df['date'].dt.day_name() # create a column with the day of the week\n",
+    "    df['date'] = pd.to_datetime(df_)  # create the column with the date from the above \"parts\" of JSON name\n",
+    "    df['day_of_week'] = df['date'].dt.day_name() # create the column with the day of the week\n",
     "    df['city_code'] = '352200375' # station code for Warsaw\n",
     "    df['date_normalize'] = df['date'] \n",
-    "    # create a column with the date in the form Y-M-D\n",
+    "    # create the column with the date in the form Y-M-D\n",
     "    df['date_normalize'] = pd.to_datetime(df['date_normalize']).dt.strftime('%Y-%m-%d') \n",
     "    \n",
     "    return df"
@@ -167,7 +153,7 @@
    "outputs": [],
    "source": [
     "def data_preprocessing_2(df):\n",
-    "    df = df[df.date_normalize != '2018-04-02'] # remove data from 2018-04-02 (because on this day data is available only until 3:00)\n",
+    "    df = df[df.date_normalize != '2018-04-02'] # remove the data from 2018-04-02 (because on this day the data is available only until 3:00)\n",
     "    df['bikes'] = df['bikes'].replace('?', np.nan).astype(float)  # remove '?' from the 'bikes' column\n",
     "    df['bike_racks'] = pd.to_numeric(df['bike_racks'])  # convert the column with the number of stations at the station to numerical values\n",
     "    return df\n",
@@ -236,7 +222,7 @@
     "    temperature_april = df_temp_april.rename(columns={\"249190890;B00300S;2018-04-01 00:00;7\": \"temp1\",\n",
     "                                                      \"20;\": \"temp2\"})\n",
     "\n",
-    "    # split the column into station code and temperature reading\n",
+    "    \n",
     "    temperature_df = pd.DataFrame(columns = ['city_code', 'date'])\n",
     "    temperature_df['date'] = temperature_march['temp1'].str[18:34]\n",
     "    temperature_df['city_code'] = temperature_march['temp1'].str[0:9]\n",
@@ -248,13 +234,13 @@
     "    total_temp['city_code'] = temperature_df['city_code'].append(temperature_april['temp1'].str[0:9],\n",
     "                              ignore_index = True)\n",
     "\n",
-    "    # extract year, month, day, hour and minute from data frame\n",
+    "    # extract year, month, day, hour and minute from the data frame\n",
     "    cops = pd.DataFrame({'year': total_temp['date'].str[0:4],\n",
     "                     'month': total_temp['date'].str[5:7],\n",
     "                     'day': total_temp['date'].str[8:11],\n",
     "                     'hour': total_temp['date'].str[11:13],\n",
     "                     'minutes': total_temp['date'].str[14:17]})\n",
-    "    total_temp['date'] = pd.to_datetime(cops) # create a column with the date of temperature reading\n",
+    "    total_temp['date'] = pd.to_datetime(cops) # create the column with the date of temperature reading\n",
     "\n",
     "    # convert second column to str and extract a decimal from it\n",
     "    temperature_march['temp2'] = temperature_march['temp2'].astype(str).str[0]  \n",
@@ -297,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # append temp data to the main data frame\n",
+    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # append the temp data to the main data frame\n",
     "df_['temperature'] = pd.to_numeric(df_['temperature']) # change the data type of the column with temp values from str to int"
    ]
   },
@@ -327,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # append rainfall data to the main data frame"
+    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # append the rainfall data to the main data frame"
    ]
   },
   {
@@ -2941,17 +2927,6 @@
     "df_hourly = warsaw_bikes_rent.groupby(['hour', 'name']).bikes_rental.sum().reset_index()\n",
     "df_hourly = df_hourly.groupby([pd.to_datetime(df_hourly['hour']).dt.hour, 'name'])['bikes_rental'].median()\n",
     "df_hourly.loc[df_hourly.groupby(level=0).idxmax()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def removeNotWarsaw(df):\n",
-    "    return df[df.stationCode\n",
-    "            .apply(lambda stationCode: stationCode == 352200375)]"
    ]
   }
  ],
