--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "places = []\n",
     "\n",
-    "# path to the directory where the JSON files are stored\n",
+    "# path to the directory where JSON files are stored\n",
     "mdir = \"C:\\\\Users\\\\Przem\\\\Code\\\\Analysis-And-Visualization-For-Bike-Sharing-Systems-In-Warsaw\\\\data\"\n",
     "\n",
     "for file in Path(mdir).glob(\"*.json\"): \n",
@@ -130,7 +130,7 @@
    "source": [
     "def data_preprocessing_1(df): \n",
     "    \n",
-    "    # split the JSON file names into year, month, day, hour and minutes\n",
+    "    # split JSON file names into year, month, day, hour and minutes\n",
     "    df_ = pd.DataFrame({'year': df['date'].str[0:4],\n",
     "                     'month': df['date'].str[4:6],\n",
     "                     'day': df['date'].str[6:8],\n",
@@ -155,7 +155,7 @@
     "def data_preprocessing_2(df):\n",
     "    df = df[df.date_normalize != '2018-04-02'] # remove the data from 2018-04-02 (because on this day the data is available only until 3:00)\n",
     "    df['bikes'] = df['bikes'].replace('?', np.nan).astype(float)  # remove '?' from the 'bikes' column\n",
-    "    df['bike_racks'] = pd.to_numeric(df['bike_racks'])  # convert the column with the number of stations at the station to numerical values\n",
+    "    df['bike_racks'] = pd.to_numeric(df['bike_racks'])  # convert the column with the number of stations to numerical values\n",
     "    return df\n",
     "    "
    ]
@@ -1026,7 +1026,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After adding up the number of bikes rented at all stations throughout the data collection period, it can be seen that there are stations from which no bike has left in the considered time. These stations, in the context of the popularity rating, were not taken into account and were removed from the collection."
+    "After adding up the number of bikes rented at all stations throughout the data collection period, it can be seen that there are stations from which no bike was borrowed in the considered time. These stations, in the context of the popularity rating, were not taken into account and were removed from the collection."
    ]
   },
   {
@@ -1114,11 +1114,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n",
+    "bike_track = bike_track.sort_values(['bike_number', 'start_time'], ascending=[True, True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_track['end_time'] = bike_track.iloc[0:, 1]\n",
+    "bike_track['end_time'] = bike_track['end_time'].shift(-1)\n",
+    "bike_track['station B'] = bike_track.iloc[0:, 0] \n",
+    "bike_track['station B'] = bike_track['station B'].shift(-1)\n",
+    "bike_track['ID_B'] = bike_track.iloc[0:, 2] \n",
+    "bike_track['ID_B'] = bike_track['ID_B'].shift(-1)\n",
+    "bike_track['lat_B'] = bike_track.iloc[0:, 3] \n",
+    "bike_track['lat_B'] = bike_track['lat_B'].shift(-1)\n",
+    "bike_track['lng_B'] = bike_track.iloc[0:, 4] \n",
+    "bike_track['lng_B'] = bike_track['lng_B'].shift(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bike_track_df_ = bike_track_df.fillna(method='ffill')\n",
     "bike_track_df_ = bike_track_df_.transpose()\n",
     "bike_track_df_ = bike_track_df_.dropna()\n",
     "bike_track_df_ = bike_track_df_.transpose()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2093,7 +2128,7 @@
     "                     columns='weekday', \n",
     "                     values='bikes_rental', \n",
     "                     aggfunc='mean')\n",
-    "hour_weekday_rent.plot(figsize=(16,8)).set(title = \"Graph of the dependence of the number of rented bikes depending on the day of the week and time\", ylabel = 'Liczba wypożyczonych rowerów', xlabel = 'Godzina')\n",
+    "hour_weekday_rent.plot(figsize=(16,8)).set(title = \"Graph of the dependence of the number of rented bikes depending on the day of the week and time\", ylabel = 'Number of bike rentals', xlabel = 'Godzina')\n",
     "plt.show()"
    ]
   },
