--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1149,10 +1149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_track_df_ = bike_track_df.fillna(method='ffill')\n",
-    "bike_track_df_ = bike_track_df_.transpose()\n",
-    "bike_track_df_ = bike_track_df_.dropna()\n",
-    "bike_track_df_ = bike_track_df_.transpose()"
+    "bike_track = bike_track[bike_track['station A'] != bike_track['station B']] # usunięcie wierszy w których znajdują się te same stacje\n",
+    "bike_track = bike_track.reset_index(drop = True)"
    ]
   },
   {
@@ -1160,7 +1158,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bike_track = bike_track[['ID_A', 'lat_A', 'lng_A', 'station A', 'start_time', 'bike_number', 'end_time', 'station B', 'ID_B', 'lat_B', 'lng_B']]\n",
+    "bike_track['lat_A'] = pd.to_numeric(bike_track['lat_A'])\n",
+    "bike_track['lng_A'] = pd.to_numeric(bike_track['lng_A'])\n",
+    "bike_track['lat_B'] = pd.to_numeric(bike_track['lat_B'])\n",
+    "bike_track['lng_B'] = pd.to_numeric(bike_track['lng_B'])"
+   ]
   },
   {
    "cell_type": "markdown",
