--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1167,6 +1167,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "latA = regular_routes_.lat_A.tolist()\n",
+    "lngA = regular_routes_.lng_A.tolist()\n",
+    "latB = regular_routes_.lat_B.tolist()\n",
+    "lngB = regular_routes_.lng_B.tolist()\n",
+    "\n",
+    "gmap = gmplot.GoogleMapPlotter(52.21,21, 13) \n",
+    "\n",
+    "for i in range(len(regular_routes_)):  # trasy rysowane są w petli, aby nie łączyć kolejnych węzłów\n",
+    "    \n",
+    "    x = [ latA[i], latB[i] ]\n",
+    "    y = [ lngA[i], lngB[i] ]\n",
+    "    \n",
+    "    gmap.scatter(x, y,'# FF0000',size = 40, marker = False ) \n",
+    "  \n",
+    "    gmap.plot(x, y,'white', edge_width = 1.5) \n",
+    "\n",
+    "# mapa Warszawy z regularnymi trasami \n",
+    "gmap.draw(\"map.html\")\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rr_map = folium.Map(location=[52.24, 21.00],\n",
+    "    zoom_start=14,)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for ind in regular_routes_.index:     \n",
+    "    tooltip_txt = regular_routes_['station A'][ind]\n",
+    "    tooltip_txt_ = regular_routes_['station B'][ind]\n",
+    "     \n",
+    "       \n",
+    "    \n",
+    "    route_lats_longs = [[float(regular_routes_['lat_A'][ind]), float(regular_routes_['lng_A'][ind])],\n",
+    "                        [float(regular_routes_['lat_B'][ind]), float(regular_routes_['lng_B'][ind])]]\n",
+    "                        \n",
+    "    \n",
+    "    folium.PolyLine(route_lats_longs).add_to(rr_map)\n",
+    "    \n",
+    "rr_map"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
