--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -138,7 +138,7 @@
     "                     'minutes': df['date'].str[11:13]})\n",
     "    df['date'] = pd.to_datetime(df_)  # create the column with the date from the above \"parts\" of JSON name\n",
     "    df['day_of_week'] = df['date'].dt.day_name() # create the column with the day of the week\n",
-    "    df['city_code'] = '352200375' # station code for Warsaw\n",
+    "    df['city_code'] = '352200375' # create the column with the station code for Warsaw\n",
     "    df['date_normalize'] = df['date'] \n",
     "    # create the column with the date in the form Y-M-D\n",
     "    df['date_normalize'] = pd.to_datetime(df['date_normalize']).dt.strftime('%Y-%m-%d') \n",
@@ -153,9 +153,12 @@
    "outputs": [],
    "source": [
     "def data_preprocessing_2(df):\n",
-    "    df = df[df.date_normalize != '2018-04-02'] # remove the data from 2018-04-02 (because on this day the data is available only until 3:00)\n",
-    "    df['bikes'] = df['bikes'].replace('?', np.nan).astype(float)  # remove '?' from the 'bikes' column\n",
-    "    df['bike_racks'] = pd.to_numeric(df['bike_racks'])  # convert the column with the number of stations to numerical values\n",
+    "    \n",
+    "    # remove the data from 2018-04-02 (on this day the data is available only until 3:00)\n",
+    "    df = df[df.date_normalize != '2018-04-02'] \n",
+    "    df['bikes'] = df['bikes'].replace('?', np.nan).astype(float)  # remove '?' from the 'bikes column'\n",
+    "    # convert the column with the number of stations to numerical values\n",
+    "    f['bike_racks'] = pd.to_numeric(df['bike_racks'])  \n",
     "    return df\n",
     "    "
    ]
@@ -222,7 +225,6 @@
     "    temperature_april = df_temp_april.rename(columns={\"249190890;B00300S;2018-04-01 00:00;7\": \"temp1\",\n",
     "                                                      \"20;\": \"temp2\"})\n",
     "\n",
-    "    \n",
     "    temperature_df = pd.DataFrame(columns = ['city_code', 'date'])\n",
     "    temperature_df['date'] = temperature_march['temp1'].str[18:34]\n",
     "    temperature_df['city_code'] = temperature_march['temp1'].str[0:9]\n",
@@ -313,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # append the rainfall data to the main data frame"
+    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # append rainfall data to the main data frame"
    ]
   },
   {
@@ -781,6 +783,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the stations: \n",
+    "- Czerniakowska - Gagarina, \n",
+    "- Marszałkowska - al. Solidarności, \n",
+    "- Wołoska-Odyńca, \n",
+    "- al. Jana Pawła II - Grzybowska\n",
+    "\n",
+    "The number of missing information on the number of bikes at stations has been replaced with values from previous time intervals, as they do not constitute a large share in the entire data set.\n",
+    "\n",
+    "The rest of the stations from the list above were removed from the analysis due to the large amount of missing information,"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -867,9 +884,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warsaw_bikes_rent['weekday'] = warsaw_bikes_rent.date.dt.day_name() # create a column with the day of the week\n",
-    "warsaw_bikes_rent['date_'] = warsaw_bikes_rent.date.dt.date # create a date column in the form Y-M-D\n",
-    "warsaw_bikes_rent['hour_'] = warsaw_bikes_rent.date.dt.hour # create a column with an hour"
+    "warsaw_bikes_rent['weekday'] = warsaw_bikes_rent.date.dt.day_name() # create the column with the day of the week\n",
+    "warsaw_bikes_rent['date_'] = warsaw_bikes_rent.date.dt.date # create the date column in the form Y-M-D\n",
+    "warsaw_bikes_rent['hour_'] = warsaw_bikes_rent.date.dt.hour # create the column with an hour"
    ]
   },
   {
@@ -986,7 +1003,7 @@
    "outputs": [],
    "source": [
     "bikes_df['temperature'] = bikes_df['temperature'].round(1) # round the temp values\n",
-    "bikes_df['rainfall'] = bikes_df['rainfall'].round(1) # round the rainfall values\n"
+    "bikes_df['rainfall'] = bikes_df['rainfall'].round(1) # round the rainfall values"
    ]
   },
   {
