--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -794,7 +794,7 @@
     "\n",
     "The number of missing information on the number of bikes at stations has been replaced with values from previous time intervals, as they do not constitute a large share in the entire data set.\n",
     "\n",
-    "The rest of the stations from the list above were removed from the analysis due to the large amount of missing information,"
+    "The rest of the stations from the list above were removed from the analysis due to the large amount of missing information"
    ]
   },
   {
@@ -962,15 +962,7 @@
    "source": [
     "# checking on which days and hours there were the most bikes rentals\n",
     "warsaw_bikes_rent['_date'] = pd.to_datetime(warsaw_bikes_rent['date'].dt.strftime('%Y-%m-%d %H'))\n",
-    "warsaw_bikes_rent['minutes_'] = warsaw_bikes_rent.date.dt.minute"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "warsaw_bikes_rent['minutes_'] = warsaw_bikes_rent.date.dt.minute\n",
     "hour_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', '_date', 'minutes_', 'weekday']).agg({'bikes_rental':np.sum})"
    ]
   },
@@ -988,50 +980,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sum up the number of bike rentals for stations on individual days\n",
-    "bikes_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', 'date_']).agg({'temperature':np.mean, 'rainfall':np.sum, 'bikes_rental':np.sum})"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bikes_df['temperature'] = bikes_df['temperature'].round(1) # round the temp values\n",
-    "bikes_df['rainfall'] = bikes_df['rainfall'].round(1) # round the rainfall values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# stworzenie ramki z liczbą wypożyczonych rowerów w poszczególnych dniach \n",
-    "df_ac = bikes_df.pivot_table(index='name', columns=['date_', 'temperature', 'rainfall'], values='bikes_rental')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_ac.transpose().boxplot(vert=False, figsize=(12,100)).set(title = \"Checking for outliers\")\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# sum up the number of bike rentals for stations on individual days\n",
+    "bikes_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', 'date_']).agg({'temperature':np.mean, 'rainfall':np.sum, 'bikes_rental':np.sum})\n",
+    "\n",
+    "bikes_df['temperature'] = bikes_df['temperature'].round(1) # round temp values\n",
+    "bikes_df['rainfall'] = bikes_df['rainfall'].round(1) # round rainfall values\n",
+    "\n",
+    "# create a frame with the number of bikes rented on a particular day\n",
+    "df_ac = bikes_df.pivot_table(index='name', columns=['date_', 'temperature', 'rainfall'], values='bikes_rental')\n",
     "# determine the sum and average of bikes rented for individual stations\n",
     "alldfc_ = df_ac.copy()\n",
     "alldfc_['total'] = alldfc_.sum(axis = 1)\n",
@@ -1052,7 +1012,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove from the data frame stations for which borrowed values are unreliable\n",
+    "# remove from the data frame the stations for which borrowed values are unreliable\n",
     "bikes_df = bikes_df.drop(['Mirków', 'Klarysew', 'Park Zdrojowy', 'Grapa', 'CH Marywilska 44', 'Skolimów'])"
    ]
   },
@@ -1117,124 +1077,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counter = Counter()\n",
-    "for col in bike_track_df_.columns: # search the collection and listing pairs of stations between which bicycles traveled most oftensearching the collection and listing pairs of stations between which bicycles traveled most often\n",
-    "    routes = list(zip(bike_track_df_[col].shift(1, fill_value=bike_track_df_[col][0]), bike_track_df_[col]))\n",
-    "    routes = [(k, v) for k, v in routes if k != v]\n",
-    "    counter.update(routes)\n",
-    "counter.most_common(15)"
+    "bike_track_df_ = bike_track_df.fillna(method='ffill')\n",
+    "bike_track_df_ = bike_track_df_.transpose()\n",
+    "bike_track_df_ = bike_track_df_.dropna()\n",
+    "bike_track_df_ = bike_track_df_.transpose()\n",
+    "\n",
+    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The list of routes can be determined by sorting the data frame by bike numbers and time, and then copying columns from the station data and moving one row up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n",
-    "bike_track = bike_track.sort_values(['bike_number', 'start_time'], ascending=[True, True])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track['end_time'] = bike_track.iloc[0:, 1]\n",
-    "bike_track['end_time'] = bike_track['end_time'].shift(-1)\n",
-    "bike_track['station B'] = bike_track.iloc[0:, 0] \n",
-    "bike_track['station B'] = bike_track['station B'].shift(-1)\n",
-    "bike_track['ID_B'] = bike_track.iloc[0:, 2] \n",
-    "bike_track['ID_B'] = bike_track['ID_B'].shift(-1)\n",
-    "bike_track['lat_B'] = bike_track.iloc[0:, 3] \n",
-    "bike_track['lat_B'] = bike_track['lat_B'].shift(-1)\n",
-    "bike_track['lng_B'] = bike_track.iloc[0:, 4] \n",
-    "bike_track['lng_B'] = bike_track['lng_B'].shift(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track = bike_track[bike_track['station A'] != bike_track['station B']] # usunięcie wierszy w których znajdują się te same stacje\n",
-    "bike_track = bike_track.reset_index(drop = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track = bike_track[['ID_A', 'lat_A', 'lng_A', 'station A', 'start_time', 'bike_number', 'end_time', 'station B', 'ID_B', 'lat_B', 'lng_B']]\n",
-    "bike_track['lat_A'] = pd.to_numeric(bike_track['lat_A'])\n",
-    "bike_track['lng_A'] = pd.to_numeric(bike_track['lng_A'])\n",
-    "bike_track['lat_B'] = pd.to_numeric(bike_track['lat_B'])\n",
-    "bike_track['lng_B'] = pd.to_numeric(bike_track['lng_B'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "latA = regular_routes_.lat_A.tolist()\n",
-    "lngA = regular_routes_.lng_A.tolist()\n",
-    "latB = regular_routes_.lat_B.tolist()\n",
-    "lngB = regular_routes_.lng_B.tolist()\n",
-    "\n",
-    "gmap = gmplot.GoogleMapPlotter(52.21,21, 13) \n",
-    "\n",
-    "for i in range(len(regular_routes_)):  # trasy rysowane są w petli, aby nie łączyć kolejnych węzłów\n",
-    "    \n",
-    "    x = [ latA[i], latB[i] ]\n",
-    "    y = [ lngA[i], lngB[i] ]\n",
-    "    \n",
-    "    gmap.scatter(x, y,'# FF0000',size = 40, marker = False ) \n",
-    "  \n",
-    "    gmap.plot(x, y,'white', edge_width = 1.5) \n",
-    "\n",
-    "# mapa Warszawy z regularnymi trasami \n",
-    "gmap.draw(\"map.html\")\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rr_map = folium.Map(location=[52.24, 21.00],\n",
-    "    zoom_start=14,)\n",
-    "\n",
-    "\n",
-    "\n",
-    "for ind in regular_routes_.index:     \n",
-    "    tooltip_txt = regular_routes_['station A'][ind]\n",
-    "    tooltip_txt_ = regular_routes_['station B'][ind]\n",
-    "     \n",
-    "       \n",
-    "    \n",
-    "    route_lats_longs = [[float(regular_routes_['lat_A'][ind]), float(regular_routes_['lng_A'][ind])],\n",
-    "                        [float(regular_routes_['lat_B'][ind]), float(regular_routes_['lng_B'][ind])]]\n",
-    "                        \n",
-    "    \n",
-    "    folium.PolyLine(route_lats_longs).add_to(rr_map)\n",
-    "    \n",
-    "rr_map"
    ]
   },
   {
@@ -1271,7 +1133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rain_temp_df = pd.concat([temp_df, rain_df['rainfall']], axis = 1)  # combine the temperature value with the amount of rainfall"
+    "rain_temp_df = pd.concat([temp_df, rain_df['rainfall']], axis = 1)  # combine a temperature value with the amount of rainfall"
    ]
   },
   {
@@ -1329,15 +1191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bikes_station_df = bikes_station_df.fillna(method='ffill') # replace NaNs with the value noted in the previous period"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bikes_station_df = bikes_station_df.fillna(method='ffill') # replace NaNs with the value noted in the previous period\n",
     "bikes_station_df_ = pd.DataFrame(bikes_station_df.iloc[28, :]).reset_index() # data from the last day are collected to analyze the size of the stations\n",
     "bikes_station_df_ = bikes_station_df_.rename(columns={bikes_station_df_.columns[3]: \"bike_racks\"})\n",
     "bikes_station_df_['bike_racks'] = bikes_station_df_['bike_racks'].astype(int)"
