--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -130,17 +130,17 @@
    "source": [
     "def data_preprocessing_1(df): \n",
     "    \n",
-    "    # split JSON file names into year, month, day, hour and minutes\n",
+    "    # splits JSON file names into year, month, day, hour and minutes\n",
     "    df_ = pd.DataFrame({'year': df['date'].str[0:4],\n",
     "                     'month': df['date'].str[4:6],\n",
     "                     'day': df['date'].str[6:8],\n",
     "                     'hour': df['date'].str[9:11],\n",
     "                     'minutes': df['date'].str[11:13]})\n",
-    "    df['date'] = pd.to_datetime(df_)  # create the column with the date from the above \"parts\" of JSON name\n",
-    "    df['day_of_week'] = df['date'].dt.day_name() # create the column with the day of the week\n",
-    "    df['city_code'] = '352200375' # create the column with the station code for Warsaw\n",
+    "    df['date'] = pd.to_datetime(df_)  # adds a column with the date from the above \"parts\" of JSON name\n",
+    "    df['day_of_week'] = df['date'].dt.day_name() # adds a column with the day of the week\n",
+    "    df['city_code'] = '352200375' # adds a column with the station code for Warsaw\n",
     "    df['date_normalize'] = df['date'] \n",
-    "    # create the column with the date in the form Y-M-D\n",
+    "    # adds a column with the date in the form Y-M-D\n",
     "    df['date_normalize'] = pd.to_datetime(df['date_normalize']).dt.strftime('%Y-%m-%d') \n",
     "    \n",
     "    return df"
@@ -154,11 +154,11 @@
    "source": [
     "def data_preprocessing_2(df):\n",
     "    \n",
-    "    # remove the data from 2018-04-02 (on this day the data is available only until 3:00)\n",
+    "    # removes the data from 2018-04-02 (on this day the data is available only until 3:00)\n",
     "    df = df[df.date_normalize != '2018-04-02'] \n",
-    "    df['bikes'] = df['bikes'].replace('?', np.nan).astype(float)  # remove '?' from the 'bikes column'\n",
-    "    # convert the column with the number of stations to numerical values\n",
-    "    f['bike_racks'] = pd.to_numeric(df['bike_racks'])  \n",
+    "    df['bikes'] = df['bikes'].replace('?', np.nan).astype(float)  # removes '?' from the 'bikes column'\n",
+    "    # converts the column with the number of stations to numerical values\n",
+    "    df['bike_racks'] = pd.to_numeric(df['bike_racks'])  \n",
     "    return df\n",
     "    "
    ]
@@ -236,26 +236,26 @@
     "    total_temp['city_code'] = temperature_df['city_code'].append(temperature_april['temp1'].str[0:9],\n",
     "                              ignore_index = True)\n",
     "\n",
-    "    # extract year, month, day, hour and minute from the data frame\n",
+    "    # extracts year, month, day, hour and minute from the data frame\n",
     "    cops = pd.DataFrame({'year': total_temp['date'].str[0:4],\n",
     "                     'month': total_temp['date'].str[5:7],\n",
     "                     'day': total_temp['date'].str[8:11],\n",
     "                     'hour': total_temp['date'].str[11:13],\n",
     "                     'minutes': total_temp['date'].str[14:17]})\n",
-    "    total_temp['date'] = pd.to_datetime(cops) # create the column with the date of temperature reading\n",
+    "    total_temp['date'] = pd.to_datetime(cops) # creates a column with the date of temperature reading\n",
     "\n",
-    "    # convert second column to str and extract a decimal from it\n",
+    "    # converts the second column to str and extract a decimal from it\n",
     "    temperature_march['temp2'] = temperature_march['temp2'].astype(str).str[0]  \n",
     "    temperature_april['temp2'] = temperature_april['temp2'].astype(str).str[0]\n",
     "\n",
-    "    # extract from the first column the value of one or tens of temperatures\n",
+    "    # extracts from the first column the value of one or tens of temperatures\n",
     "    temperature_march['temp1'] = temperature_march['temp1'].str[35:]\n",
     "    temperature_march['temp1'] = temperature_march['temp1'].replace(';','', regex=True)\n",
     "\n",
     "    temperature_april['temp1'] = temperature_april['temp1'].str[35:]\n",
     "    temperature_april['temp1'] = temperature_april['temp1'].replace(';','', regex=True)\n",
     "\n",
-    "    # combine the tens/ones from the first column with the decimal from the second column\n",
+    "    # combines the tens/ones from the first column with the decimal from the second column\n",
     "    new_temp1 = temperature_march['temp2'].copy()\n",
     "    temperature_march['temp1'] = temperature_march['temp1'].str.cat(new_temp1, sep='.')\n",
     "    temperature_march= temperature_march.drop(temperature_march.columns[[1]], axis=1)\n",
@@ -285,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # append the temp data to the main data frame\n",
+    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # appends temp data to the main data frame\n",
     "df_['temperature'] = pd.to_numeric(df_['temperature']) # change the data type of the column with temp values from str to int"
    ]
   },
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # append rainfall data to the main data frame"
+    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # appends rainfall data to the main data frame"
    ]
   },
   {
@@ -779,7 +779,7 @@
     }
    ],
    "source": [
-    "warsaw_bikes_df_.isnull().sum().sort_values(ascending = False).head(30) # display stations which contain missing values"
+    "warsaw_bikes_df_.isnull().sum().sort_values(ascending = False).head(30) # displays stations contain missing values"
    ]
   },
   {
@@ -816,7 +816,7 @@
    "outputs": [],
    "source": [
     "warsaw_bikes_df_ = warsaw_bikes_df_.transpose()\n",
-    "warsaw_bikes_df_ = warsaw_bikes_df_.dropna() # remove stations for which there is insufficient information\n",
+    "warsaw_bikes_df_ = warsaw_bikes_df_.dropna() # removes stations for which there is insufficient information\n",
     "warsaw_bikes_df_ = warsaw_bikes_df_.transpose()"
    ]
   },
@@ -884,9 +884,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warsaw_bikes_rent['weekday'] = warsaw_bikes_rent.date.dt.day_name() # create the column with the day of the week\n",
-    "warsaw_bikes_rent['date_'] = warsaw_bikes_rent.date.dt.date # create the date column in the form Y-M-D\n",
-    "warsaw_bikes_rent['hour_'] = warsaw_bikes_rent.date.dt.hour # create the column with an hour"
+    "warsaw_bikes_rent['weekday'] = warsaw_bikes_rent.date.dt.day_name() # creates a column with the day of the week\n",
+    "warsaw_bikes_rent['date_'] = warsaw_bikes_rent.date.dt.date # creates a date column in the form Y-M-D\n",
+    "warsaw_bikes_rent['hour_'] = warsaw_bikes_rent.date.dt.hour # creates a column with an hour"
    ]
   },
   {
