analysis-and-visualization-for-bike-sharing-systems.ipynb

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1153,15 +1153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# checking on which days and hours there were the most bikes rentals\n",
     "warsaw_bikes_rent['_date'] = pd.to_datetime(warsaw_bikes_rent['date'].dt.strftime('%Y-%m-%d %H'))\n",
     "warsaw_bikes_rent['minutes_'] = warsaw_bikes_rent.date.dt.minute\n",
-    "hour_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', '_date', 'minutes_', 'weekday']).agg({'bikes_rental':np.sum})\n",
-    "\n",
+    "hour_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', '_date', 'minutes_', 'weekday']).agg({'bikes_rental':np.sum})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# remove information about the number of bikes at stations from 03-27 2:30, 2:40 and 03-30 7:00\n",
     "warsaw_bikes_rent = warsaw_bikes_rent[warsaw_bikes_rent.date != '2018-03-27 02:30:00'] \n",
     "warsaw_bikes_rent = warsaw_bikes_rent[warsaw_bikes_rent.date != '2018-03-27 02:40:00']\n",
@@ -1175,6 +1182,7 @@
     "\n",
     "# create a frame with the number of bikes rented on a particular day\n",
     "df_ac = bikes_df.pivot_table(index='name', columns=['date_', 'temperature', 'rainfall'], values='bikes_rental')\n",
+    "\n",
     "# determine the sum and average of bikes rented for individual stations\n",
     "alldfc_ = df_ac.copy()\n",
     "alldfc_['total'] = alldfc_.sum(axis = 1)\n",
@@ -1265,7 +1273,24 @@
     "bike_track_df_ = bike_track_df_.dropna()\n",
     "bike_track_df_ = bike_track_df_.transpose()\n",
     "\n",
-    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
+    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n",
+    "bike_track = bike_track.sort_values(['bike_number', 'start_time'], ascending=[True, True])\n",
+    "\n",
+    "bike_track['end_time'] = bike_track.iloc[0:, 1]\n",
+    "bike_track['end_time'] = bike_track['end_time'].shift(-1)\n",
+    "bike_track['station B'] = bike_track.iloc[0:, 0] \n",
+    "bike_track['station B'] = bike_track['station B'].shift(-1)\n",
+    "bike_track['ID_B'] = bike_track.iloc[0:, 2] \n",
+    "bike_track['ID_B'] = bike_track['ID_B'].shift(-1)\n",
+    "bike_track['lat_B'] = bike_track.iloc[0:, 3] \n",
+    "bike_track['lat_B'] = bike_track['lat_B'].shift(-1)\n",
+    "bike_track['lng_B'] = bike_track.iloc[0:, 4] \n",
+    "bike_track['lng_B'] = bike_track['lng_B'].shift(-1)\n",
+    "\n",
+    "bike_track = bike_track[bike_track['station A'] != bike_track['station B']] # deletes samples that contain the same stations\n",
+    "bike_track = bike_track.reset_index(drop = True)\n",
+    "\n",
+    "bike_track = bike_track[['ID_A', 'lat_A', 'lng_A', 'station A', 'start_time', 'bike_number', 'end_time', 'station B', 'ID_B', 'lat_B', 'lng_B']]"
    ]
   },
   {
@@ -1295,7 +1320,7 @@
     "rain_df = rainfall_all.groupby(['date_normalize']).agg({'rainfall':np.sum}) # calculation of the total rainfall for each day\n",
     "rain_df = rain_df.reset_index()\n",
     "\n",
-    "rain_temp_df = pd.concat([temp_df, rain_df['rainfall']], axis = 1)  # combines a temperature value with the amount of rainfall"
+    "rain_temp_df = pd.concat([temp_df, rain_df['rainfall']], axis = 1)  # combines temperature values with the amount of rainfall"
    ]
   },
   {
@@ -1380,7 +1405,7 @@
    "source": [
     "plt.figure(figsize=(13,7))\n",
     "sns.set(font_scale=1.4, style=\"whitegrid\")\n",
-    "sns.distplot(bikes_station_df_['bike_racks'], kde = False, bins = 30, color = '#eb6c6a').set(title = 'Bikes stations in Warsaw', xlabel = 'Ilosc stojaków', ylabel = 'Ilosc stacji')\n",
+    "sns.distplot(bikes_station_df_['bike_racks'], kde = False, bins = 30, color = '#eb6c6a').set(title = 'Bikes stations in Warsaw', xlabel = 'Number of racks', ylabel = 'Number of stations')\n",
     "plt.show()"
    ]
   },
@@ -2226,7 +2251,7 @@
     "                     columns='weekday', \n",
     "                     values='bikes_rental', \n",
     "                     aggfunc='mean')\n",
-    "hour_weekday_rent.plot(figsize=(16,8)).set(title = \"Graph of the dependence of the number of rented bikes depending on the day of the week and time\", ylabel = 'Number of bike rentals', xlabel = 'Godzina')\n",
+    "hour_weekday_rent.plot(figsize=(16,8)).set(title = \"Graph of the dependence of the number of rented bikes depending on the day of the week and time\", ylabel = 'Number of bike rentals', xlabel = 'Hour')\n",
     "plt.show()"
    ]
   },
@@ -3030,11 +3055,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# najbardziej popularne stacje rowerowe w poszczególnych dniach tygodnia\n",
+    "# the most popular bike stations on individual days of the week\n",
     "df_week = warsaw_bikes_rent.groupby(['date_', 'name']).bikes_rental.sum().reset_index()\n",
     "df_week = df_week.rename(columns = {\"date_\": \"day_of_week\"})\n",
     "df_week = df_week.groupby([pd.to_datetime(df_week['day_of_week']).dt.dayofweek ,'name'])['bikes_rental'].median()\n",
-    "df_week.loc[df_week.groupby(level=0).idxmax()]"
+    "df_week.loc[df_week.groupby(level=0).idxmax()]\n"
    ]
   },
   {
@@ -3043,11 +3068,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# posortowanie stacji rowerowych przy metrze od najwiekszej mediany wypożyczeń\n",
+    "\n",
+    "# sorting bike stations by the subway from the highest median of rentals\n",
     "meds_metro = sort_rent_.median().sort_values(ascending=True)\n",
     "sort_rent_ = sort_rent_[meds_metro.index]\n",
     "sort_rent_.boxplot(vert=False, figsize=(10,18))\n",
-    "plt.show()"
+    "#plt.show()\n"
    ]
   },
   {
@@ -3056,7 +3082,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# najbardziej popularne stacje rowerowe w poszczególnych godzinach\n",
+    "\n",
+    "# the most popular bike stations at specific times\n",
     "df_hourly = warsaw_bikes_rent.groupby(['hour', 'name']).bikes_rental.sum().reset_index()\n",
     "df_hourly = df_hourly.groupby([pd.to_datetime(df_hourly['hour']).dt.hour, 'name'])['bikes_rental'].median()\n",
     "df_hourly.loc[df_hourly.groupby(level=0).idxmax()]"
