--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1228,7 +1228,7 @@
    "outputs": [],
    "source": [
     "start_time = time.time()\n",
-    "bike_track = (df.set_index(['name', 'date', 'uid', 'lat', 'lng'])\n",
+    "bike_routes = (df.set_index(['name', 'date', 'uid', 'lat', 'lng'])\n",
     "            ['bike_numbers'].str.split(',', expand=True)\n",
     "            .stack()\n",
     "            .reset_index(name='bike_numbers')\n",
@@ -1243,8 +1243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_track['bike_numbers'] = bike_track['bike_numbers'].replace('?', np.nan) \n",
-    "bike_track.dropna(subset=['bike_numbers'], inplace=True)"
+    "bike_routes['bike_numbers'] = bike_routes['bike_numbers'].replace('?', np.nan) \n",
+    "bike_routes.dropna(subset=['bike_numbers'], inplace=True)"
    ]
   },
   {
@@ -1254,7 +1254,7 @@
    "outputs": [],
    "source": [
     "start_time = time.time()\n",
-    "bike_track_df = bike_track.pivot_table(index='date',\n",
+    "bike_routes_df = bike_routes.pivot_table(index='date',\n",
     "                                     columns=['bike_numbers'], \n",
     "                                     values='name',\n",
     "                                     aggfunc=lambda x: ' '.join(x))\n",
@@ -1268,29 +1268,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_track_df_ = bike_track_df.fillna(method='ffill')\n",
-    "bike_track_df_ = bike_track_df_.transpose()\n",
-    "bike_track_df_ = bike_track_df_.dropna()\n",
-    "bike_track_df_ = bike_track_df_.transpose()\n",
+    "bike_routes_df = bike_routes_df.fillna(method='ffill')\n",
+    "bike_routes_df = bike_routes_df.transpose()\n",
+    "bike_routes_df = bike_routes_df.dropna()\n",
+    "bike_routes_df = bike_routes_df.transpose()\n",
     "\n",
-    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n",
-    "bike_track = bike_track.sort_values(['bike_number', 'start_time'], ascending=[True, True])\n",
+    "bike_routes_df = bike_routes_df.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n",
+    "bike_routes_df = bike_routes_df.sort_values(['bike_number', 'start_time'], ascending=[True, True])\n",
     "\n",
-    "bike_track['end_time'] = bike_track.iloc[0:, 1]\n",
-    "bike_track['end_time'] = bike_track['end_time'].shift(-1)\n",
-    "bike_track['station B'] = bike_track.iloc[0:, 0] \n",
-    "bike_track['station B'] = bike_track['station B'].shift(-1)\n",
-    "bike_track['ID_B'] = bike_track.iloc[0:, 2] \n",
-    "bike_track['ID_B'] = bike_track['ID_B'].shift(-1)\n",
-    "bike_track['lat_B'] = bike_track.iloc[0:, 3] \n",
-    "bike_track['lat_B'] = bike_track['lat_B'].shift(-1)\n",
-    "bike_track['lng_B'] = bike_track.iloc[0:, 4] \n",
-    "bike_track['lng_B'] = bike_track['lng_B'].shift(-1)\n",
+    "bike_routes_df['end_time'] = bike_routes_df.iloc[0:, 1]\n",
+    "bike_routes_df['end_time'] = bike_routes_df['end_time'].shift(-1)\n",
+    "bike_routes_df['station B'] = bike_routes_df.iloc[0:, 0] \n",
+    "bike_routes_df['station B'] = bike_routes_df['station B'].shift(-1)\n",
+    "bike_routes_df['ID_B'] = bike_routes_df.iloc[0:, 2] \n",
+    "bike_routes_df['ID_B'] = bike_routes_df['ID_B'].shift(-1)\n",
+    "bike_routes_df['lat_B'] = bike_routes_df.iloc[0:, 3] \n",
+    "bike_routes_df['lat_B'] = bike_routes_df['lat_B'].shift(-1)\n",
+    "bike_routes_df['lng_B'] = bike_routes_df.iloc[0:, 4] \n",
+    "bike_routes_df['lng_B'] = bike_routes_df['lng_B'].shift(-1)\n",
     "\n",
-    "bike_track = bike_track[bike_track['station A'] != bike_track['station B']] # deletes samples that contain the same stations\n",
-    "bike_track = bike_track.reset_index(drop = True)\n",
+    "bike_routes_df = bike_routes_df[bike_routes_df['station A'] != bike_routes_df['station B']] # deletes samples that contain the same stations\n",
+    "bike_routes_df = bike_routes_df.reset_index(drop = True)\n",
     "\n",
-    "bike_track = bike_track[['ID_A', 'lat_A', 'lng_A', 'station A', 'start_time', 'bike_number', 'end_time', 'station B', 'ID_B', 'lat_B', 'lng_B']]"
+    "bike_routes_df = bike_routes_df[['ID_A', 'lat_A', 'lng_A', 'station A', 'start_time', 'bike_number', 'end_time', 'station B', 'ID_B', 'lat_B', 'lng_B']]\n",
+    "\n",
+    "bike_routes_df['lat_A'] = pd.to_numeric(bike_routes_df['lat_A'])\n",
+    "bike_routes_df['lng_A'] = pd.to_numeric(bike_routes_df['lng_A'])\n",
+    "bike_routes_df['lat_B'] = pd.to_numeric(bike_routes_df['lat_B'])\n",
+    "bike_routes_df['lng_B'] = pd.to_numeric(bike_routes_df['lng_B'])"
    ]
   },
   {
@@ -1299,6 +1304,13 @@
    "source": [
     "The list of routes can be determined by sorting the data frame by bike numbers and time, and then copying columns from the station data and moving one row up"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
