--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1119,6 +1119,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On the chart above, it can be seen that one station on March 14 and March 25 recorded a much larger number of bike rentals compared to all other stations on that day.\n",
+    "\n",
+    "\n",
+    "Due to the large variety of locations of bicycle stations and the fact that they can be very popular in the event of major sports or music events, these values do not have to mean a data collection error. The popularity of the station was assessed on the basis of the median, which is not sensitive to outliers, so extreme points were not removed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -1160,7 +1170,8 @@
     "# checking on which days and hours there were the most bikes rentals\n",
     "warsaw_bikes_rent['_date'] = pd.to_datetime(warsaw_bikes_rent['date'].dt.strftime('%Y-%m-%d %H'))\n",
     "warsaw_bikes_rent['minutes_'] = warsaw_bikes_rent.date.dt.minute\n",
-    "hour_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', '_date', 'minutes_', 'weekday']).agg({'bikes_rental':np.sum})"
+    "hour_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', '_date', 'minutes_', 'weekday']).agg({'bikes_rental':np.sum})\n",
+    "# hour_df.sort_values(by = ['bikes_rental'], ascending = False).head(40) "
    ]
   },
   {
