Analysis of the popularity of bike routes

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1321,6 +1321,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "routes = bike_track.groupby(['ID_A', 'lat_A', 'lng_A', 'station A', 'station B', 'lat_B', 'lng_B', 'ID_B',]).size().reset_index(name='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regular_routes_ = routes.sort_values(by=['count'], na_position = 'first', ascending=False).reset_index(drop = True).head(400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "latA = regular_routes_.lat_A.tolist()\n",
+    "lngA = regular_routes_.lng_A.tolist()\n",
+    "latB = regular_routes_.lat_B.tolist()\n",
+    "lngB = regular_routes_.lng_B.tolist()\n",
+    "\n",
+    "gmap = gmplot.GoogleMapPlotter(52.21,21, 13) \n",
+    "\n",
+    "for i in range(len(regular_routes_)):  # trasy rysowane są w petli, aby nie łączyć kolejnych węzłów\n",
+    "    \n",
+    "    x = [ latA[i], latB[i] ]\n",
+    "    y = [ lngA[i], lngB[i] ]\n",
+    "    \n",
+    "    gmap.scatter(x, y,'# FF0000',size = 40, marker = False ) \n",
+    "  \n",
+    "    gmap.plot(x, y,'white', edge_width = 1.5) \n",
+    "\n",
+    "# mapa Warszawy z regularnymi trasami \n",
+    "gmap.draw(\"map.html\")\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
