Analysis of the popularity of bike routes using the Folium library

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1367,7 +1367,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rr_map = folium.Map(location=[52.24, 21.00],\n",
+    "    zoom_start=14,)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for ind in regular_routes_.index:     \n",
+    "    tooltip_txt = regular_routes_['station A'][ind]\n",
+    "    tooltip_txt_ = regular_routes_['station B'][ind]\n",
+    "     \n",
+    "       \n",
+    "    \n",
+    "    route_lats_longs = [[float(regular_routes_['lat_A'][ind]), float(regular_routes_['lng_A'][ind])],\n",
+    "                        [float(regular_routes_['lat_B'][ind]), float(regular_routes_['lng_B'][ind])]]\n",
+    "                        \n",
+    "    \n",
+    "    folium.PolyLine(route_lats_longs).add_to(rr_map)\n",
+    "    \n",
+    "rr_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funkcja, która przypisuje godzinie porę dnia\n",
+    "def label_r(row):\n",
+    "    if row['hour_'] >= 6 and row['hour_'] <10:\n",
+    "        return 'morning'\n",
+    "    if row['hour_'] >= 10 and row['hour_'] <12:\n",
+    "        return 'forenoon'\n",
+    "    if row['hour_'] >= 12 and row['hour_'] <15:\n",
+    "        return 'early afternoon'\n",
+    "    if row['hour_'] >= 15 and row['hour_'] <19:\n",
+    "        return 'late afternoon'\n",
+    "    if row['hour_'] >= 19 and row['hour_'] <=23:\n",
+    "        return 'evening'\n",
+    "    return 'Other'\n",
+    "\n",
+    "pop_time_of_day.apply (lambda row: label_r(row), axis=1)\n",
+    "pop_time_of_day['time_of_day'] = pop_time_of_day.apply (lambda row: label_r(row), axis=1)"
+   ]
   },
   {
    "cell_type": "markdown",
